visibility to channels that has star reference https://gitlab.com/gitlab-org/gitter/webapp/issues/2025

--- a/public/js/views/menu/room/favourite-collection/favourite-collection-item-view.less
+++ b/public/js/views/menu/room/favourite-collection/favourite-collection-item-view.less
@@ -10,15 +10,15 @@
     content:     '\e803';
     display:     block;
     position:    absolute;
-    top: 0.9rem;
-    left: 1.8rem;
+    top:         0.9rem;
+    left:        1.8rem;
     height:      @start-icon-height;
     width:       @start-icon-height;
     font-family: fontello;
-    color:       @search-message-decal-color;
+    color:       @trpYellow;
     z-index:     0;
-    transition: left 0.3s ease-out;
-    opacity: .3;
+    transition:  left 0.3s ease-out;
+    opacity:     .50;
   }
 
   &:hover:before {
